Switch to Chromium through systemd units.

--- a/files/autologin.conf
+++ b/files/autologin.conf
@@ -1,4 +1,4 @@
-[Service]
-ExecStart=
-ExecStart=-/sbin/agetty --autologin pi --noclear %I 38400 linux
-
+[SeatDefaults]
+autologin-user=pi
+autologin-user-timeout=0
+user-session=i3
