--- a/files/i3.conf
+++ b/files/i3.conf
@@ -176,9 +176,9 @@ bar {
 #
 # Please remove the following exec line:
 #######################################################################
-for_window [class="chromium"] border pixel 0
+for_window [class="Chromium"] border pixel 0
 
-exec i3-config-wizard
 exec --no-startup-id xset s 00 && xset s noblank && xset s noexpose && xset dpms 0 0 0
-exec --no-startup-id ~/chromium.sh
-
+exec --no-startup-id tmux kill-session -t x
+exec --no-startup-id tmux new-session -d -s x
+exec --no-startup-id systemctl --user start chromium
