--- a/files/i3.conf
+++ b/files/i3.conf
@@ -181,4 +181,5 @@ for_window [class="Chromium"] border pixel 0
 exec --no-startup-id xset s 00 && xset s noblank && xset s noexpose && xset dpms 0 0 0
 exec --no-startup-id tmux kill-session -t x
 exec --no-startup-id tmux new-session -d -s x
+exec --no-startup-id unclutter -idle 0 -reset &
 exec --no-startup-id systemctl --user start chromium
