--- a/files/chromium.service
+++ b/files/chromium.service
@@ -2,7 +2,7 @@
 Description=Chromium
 
 [Service]
-ExecStart=/usr/bin/chromium-browser --ignore-certificate-errors --no-first-run --disable-web-resources --disable-sync --disable-prompt-on-repost --disable-default-apps --disable-background-networking --app="https://nais.io/monitor?hostname=%H"
+ExecStart=/usr/bin/chromium-browser --kiosk --ignore-certificate-errors --no-first-run --disable-web-resources --disable-sync --disable-prompt-on-repost --disable-default-apps --disable-background-networking --app="https://nais.io/monitor?hostname=%H"
 Environment=DISPLAY=:0.0
 Environment=XAUTHORITY=/home/pi/.Xauthority
 Restart=always
