Kill chromium instead of systemctl restart
systemctl restart didn't work from crontab for some reason.
when we kill, systemd will autostart chromium for us

--- a/playbook.yml
+++ b/playbook.yml
@@ -31,7 +31,7 @@
       minute: "0"
       hour: "*/8"
       user: pi
-      job: systemctl --user restart chromium
+      job: killall chromium
   - name: Set timezone
     become: true
     timezone:
