--- a/playbook.yml
+++ b/playbook.yml
@@ -13,7 +13,7 @@
     cron:
       name: Perform healthcheck every minute
       user: pi
-      job: /home/pi/healthcheck.sh
+      job: /home/pi/healthcheck.sh > /dev/null
   - name: Copy disable_fullscreen script
     copy:
       src: disable_fullscreen.sh
@@ -24,14 +24,14 @@
     cron:
       name: Disable fullscreen every minute
       user: pi
-      job: /home/pi/disable_fullscreen.sh
+      job: /home/pi/disable_fullscreen.sh > /dev/null
   - name: Schedule restart chromium every 8 hours
     cron:
       name: Restart chromium every 8 hours
       minute: "0"
       hour: "*/8"
       user: pi
-      job: killall chromium-browser
+      job: killall chromium-browser > /dev/null
   - name: Set timezone
     become: true
     timezone:
