--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,12 @@
 - hosts: all
   remote_user: pi
   tasks:
+  - name: Copy grafana_logo
+    copy:
+      src: grafana_logo.png
+      dest: /home/pi/grafana_logo.png
+      owner: pi
+      mode: 'u+r'
   - name: Copy healthcheck script
     copy:
       src: healthcheck.sh
