--- a/playbook.yml
+++ b/playbook.yml
@@ -3,6 +3,17 @@
 - hosts: all
   remote_user: pi
   tasks:
+  - name: Ensure hostname set
+    become: true
+    hostname:
+      name: "{{ inventory_hostname }}"
+    when: not inventory_hostname is match('(\d{1,3}\.){3}\d{1,3}')
+  - name: Ensure hostname is in /etc/hosts
+    become: true
+    lineinfile:
+      dest: /etc/hosts
+      regexp: "^{{ ansible_default_ipv4.address }}.+$"
+      line: "{{ ansible_default_ipv4.address }} {{ ansible_fqdn }} {{ ansible_hostname }}"
   - name: Copy grafana_logo
     copy:
       src: grafana_logo.png
