--- a/playbook.yml
+++ b/playbook.yml
@@ -71,29 +71,14 @@
   - name: Ensure packages are present (no install recommends)
     become: true
     apt:
-      name: "{{item}}"
+      name: ["postfix" , "xserver-xorg" , "xinit" , "lightdm" , "imagemagick" , "bc"]
       state: present
       install_recommends: no
-    with_items:
-      - postfix
-      - xserver-xorg
-      - xinit
-      - lightdm
-      - imagemagick
-      - bc
   - name: Ensure packages are present (install recommends)
     become: true
     apt:
-      name: "{{item}}"
+      name: ["i3", "suckless-tools", "lxterminal", "vim", "chromium-browser", "xdotool", "tmux"]
       state: present
-    with_items:
-      - i3
-      - suckless-tools
-      - lxterminal
-      - vim
-      - chromium-browser
-      - xdotool
-      - tmux
   - name: Disable overscan (raspi-config)
     command: raspi-config nonint do_overscan 1
     become: true
@@ -142,5 +127,5 @@
       enabled: true
       daemon_reload: true
       name: chromium
-      user: yes
+      scope: user
       state: restarted
